manifests/_crds/k8sgpts.core.k8sgpt.ai.yaml
apiVersion: v1
items:
- apiVersion: core.k8sgpt.ai/v1alpha1
  kind: K8sGPT
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"core.k8sgpt.ai/v1alpha1","kind":"K8sGPT","metadata":{"annotations":{},"finalizers":["k8sgpt.ai/finalizer"],"name":"k8sgpt","namespace":"k8sgpt"},"spec":{"ai":{"anonymized":false,"autoRemediation":{"enabled":false,"resources":["Pod","Deployment","StatefulSet","DaemonSet","Service","Ingress"],"similarityRequirement":"90"},"backOff":{"enabled":true,"maxRetries":5},"backend":"openai","baseUrl":"http://k8sgpt-llm-proxy.k8sgpt.svc.cluster.local:8080/v1","enabled":true,"language" [...]
    finalizers:
    - k8sgpt.ai/finalizer
    name: k8sgpt
    namespace: k8sgpt
  spec:
    ai:
      anonymized: false
      autoRemediation:
        enabled: false
        resources:
        - Pod
        - Deployment
        - StatefulSet
        - DaemonSet
        - Service
        - Ingress
        similarityRequirement: "90"
      backOff:
        enabled: true
        maxRetries: 5
      backend: openai
      baseUrl: http://k8sgpt-llm-proxy.k8sgpt.svc.cluster.local:8080/v1
      enabled: true
      language: english
      maxTokens: "2048"
      model: llama-3.3-70b-versatile
      secret:
        key: openai-api-key
        name: k8sgpt-openai
      topk: "10"
    analysis:
      interval: 60m
    filters:
    - Pod
    - Deployment
    - StatefulSet
    - ReplicaSet
    - DaemonSet
    - Service
    - PersistentVolumeClaim
    - Node
    - CronJob
    - Job
    - HorizontalPodAutoscaler
    repository: ghcr.io/k8sgpt-ai/k8sgpt
    version: v0.4.3
kind: List
metadata:
